--- a/manifest.json
+++ b/manifest.json
@@ -8,18 +8,18 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/rb64.png",
+      "src": "/rb64.jpg",
       "sizes": "64x64",
       "type": "image/png"
     },
     {
-      "src": "/rb192.png",
+      "src": "/rb192.jpg",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/rb512.png",
-      "sizes": "512x512",
+      "src": "/rb400.jpg",
+      "sizes": "400x400",
       "type": "image/png"
     }
   ]
